solving bugs in alignment

--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@
 
 .outer {
   position: relative;
+  width: 100%;
 }
 
 header {
@@ -67,9 +68,12 @@ header {
 }
 
 #hero {
-  background-color: black;
+  background: url(images/figure.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
-  height: 736px;
+  height: 100vh;
   padding: 105px 224px 10px 263px;
   display: flex;
   flex-direction: column;
